--- a/src/client/calendar/events/event-details/EventDetails.scss
+++ b/src/client/calendar/events/event-details/EventDetails.scss
@@ -34,7 +34,7 @@
       margin-bottom: 0;
       top: pxToRem(-3);
       line-height: 3rem;
-      letter-spacing: -0.2px;
+      letter-spacing: 0;
     }
 
     .flyer {
